<resources>
    <string name="app_name">NUMADSP20YuehuaHuang</string>
    <string name="action_settings">Settings</string>
    <string name="about_string">About</string>
    <string name="dollars_int">dollars</string>
    <string name="info_text1">TextView</string>
    <string name="info_text">TextView</string>
    <string name="textview2">TextView</string>
    <string name="text_view">text_view</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="about">Button</string>
    <string name="About">About</string>
    <string name="hello_world">helloworld!</string>
    <string name="dollar_int">dollars</string>
    <string name="dollars">dollars</string>
    <string name="convert">Convert</string>
    <string name="linkcollector">LinkCollector</string>
    <string name="enter_link_name_here">Enter Link Name Here</string>
    <string name="enter_link_url_here">Enter Link URL Here</string>
    <string name="linkcollector_des">linkcollector_des</string>
    <string name="linkcollector_store">linkcollector_store</string>
    <string name="Link_Collector_Store">link collector store</string>
    <string name="name">name</string>
    <string name="url">url</string>
    <string name="scroll_to_see_more_links">scroll_to_see_more_links</string>
    <string name="Find_Prime">Find_Prime</string>
    <string name="stop_watch_time">stop_watch_time</string>
    <string name="start_watch_time">start_watch_time</string>
    <string name="prime_number">prime_number</string>
    <string name="START_FIND_PRIME">START_FIND_PRIME</string>
    <string name="STOP_FIND_PRIME">STOP_FIND_PRIME</string>
    <string name="GPS_infp">Locating now</string>
    <string name="gps_info">gps_info</string>
    <string name="show_gps">show_gps</string>

</resources>
