<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linkcollector_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.numadsp20yuehuahuang.LinkCollectorActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="#EE0707"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/linkcollector_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/scroll_to_see_more_links"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/linkRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:scrollbars="vertical" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/link_url_input"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginBottom="20dp"
        android:hint="@string/enter_link_url_here"
        android:inputType="textUri"
         />

    <EditText
        android:id="@+id/link_name_input"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginBottom="70dp"
        android:hint="@string/enter_link_name_here"
        android:inputType="text" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
